--- a/exercice2/index.html
+++ b/exercice2/index.html
@@ -8,7 +8,15 @@
 
 </head>
 <body>
+    <button value = "0">Voir electrobeach</button>
+    <button value ="1">Voir Hellfest</button>
 
+   <div id="info">
+        <div id="name"></div>
+        <div id="lat"></div>
+        <div id="lng"></div>
+
+   </div>
     
  <script src="jquery.js"></script> 
  <script src="script.js"></script>  
