--- a/exercice5-1/index.html
+++ b/exercice5-1/index.html
@@ -10,24 +10,25 @@
 
 </head>
 <body>
-  <div id="form_cont" style="height:150px; width:200px;">
     <form>
         <div class="form-group">
-          <label for="exampleInputEmail1">Pseudo</label>
-          <input type="text" class="form-control" id="pseudo" value ="pseudo" aria-describedby="pseudoHelp" placeholder="Entrer pseudo">
-          <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="password" value="password" placeholder="Password">
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
         </div>
         <div class="form-check">
-          
+          <label class="form-check-label">
+            <input type="checkbox" class="form-check-input">
+            Check me out
+          </label>
         </div>
-        <button type="submit" class="btn btn-primary">Se connecter</button><br/>
-        <button type="submit" class="btn btn-primary">Se deconnecter</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-    </div>
+ 
  
  
 <script src="jquery.js"></script> 
