fin post-it web service

--- a/exercice6/index.html
+++ b/exercice6/index.html
@@ -29,7 +29,7 @@
     </form>
     
     <script src="jquery.js"></script>
-    <script src="Postit.js" ></script>
+    <script src="Note.js" ></script>
     <script src="App.js" ></script>
     <script src="main.js"></script>
 </body>
